# RGOR_Reloc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: default.yaml  rgor.rviz
msg/: DetectionObj.msg  MultiDetectionObj.msg  NeoKFMeasurement.msg  NeoKeyFrame.msg  NeoMap.msg  NeoMapPoint.msg  NeoScale.msg
rgor/: CMakeLists.txt  Global.cpp  Mapping.cpp  Matcher.cpp  Optimizer.cpp  System.cpp  Tracking.cpp  demo.cpp
rgor/cmake/: dependency.cmake
rgor/common/: Frame.cpp  Map.cpp
rgor/include/: Global.h  Mapping.h  Matcher.h  NeoRelocation.h  Optimizer.h  RGOR.h  Relocation.h  System.h  Tracking.h  toolkits.h
rgor/include/common/: Frame.h  Map.h  NeoMap.h  Params.h  Temp.h  macros.h
rgor/proto/: PMap.pb.cc  PMap.pb.h  PMap.proto
rgor/utils/: FeatureDB.h  KMAssignment.h  LRUCache.h  draw_sphere.h  utils.h
scripts/: centernet_node.py  centernetplus.py  fire.py  fire_utils.py  pub_pcd.py
scripts/pca/: pca.py
scripts/weights/: centernet_feat.onnx  centernetplus.onnx  centernetplus_2.onnx  centernetplus_3.onnx  mean.npy  pca.npy  variance.npy
src/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  multi_node.cpp  neo_map_converter.cpp  neo_map_converter.h  neo_map_converter_node.cpp  sim_node.cpp  visualization.h
